# nl2dsl-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.html  CLAUDE.md  NL2DSL.md  README.md  benchmark_llm.py  feedback.jsonl  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: bank_history.yaml  bank_metrics.yaml  bank_terms.yaml  history.yaml  intents.yaml  metrics.yaml  permissions.yaml  terms.yaml
docs/: ARCHITECTURE.md  README.md  dag-mermaid.md  dag.dot  dag.html  interview-qa.md  query-flow.md
logs/: nl2dsl.error.log.2026-05-18  nl2dsl.error.log.2026-05-19  nl2dsl.error.log.2026-05-20  nl2dsl.log.2026-05-17  nl2dsl.log.2026-05-18  nl2dsl.log.2026-05-19  nl2dsl.log.2026-05-20
nl2dsl/: __init__.py  api.py  api_factory.py  config.py  domain_context.py  engine.py  exceptions.py  plugin.py  protocols.py
reports/: evaluation_20260601_182607.json  evaluation_20260601_182607.md  evaluation_20260601_191621.json  evaluation_20260601_191621.md  evaluation_20260601_201737.md  evaluation_20260601_202455.md  evaluation_20260601_203005.md  evaluation_20260601_203430.md  evaluation_20260601_203850.md  evaluation_20260601_205839.md
scripts/: _diagnose.sql  _inspect_db.py  check_intent.py  collect_e2e_results.py  debug_bank_domain.py  debug_plan.py  generate_bank_data.py  generate_dag.py  generate_demo_gif.py  init_semantic.py  init_vector_store.py  parse_e2e_log.py  run_e2e_with_trace.py  seed_ecommerce_data.py  test_agentic_correct.py  test_agentic_nodes.py  test_rag_coverage.py
tests/: conftest.py
web/: .gitignore  index.html  package-lock.json  (+3 more)
(+375 files in other folders)
